--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,9 @@ body {
   font-family: $fancy-font;
 
   h1 {
+    display: inline;
     font-family: $sans-font;
+    margin: 0 auto;
     text-align: center;
   }
 
@@ -26,5 +28,9 @@ body {
     margin: 1rem;
     padding: 1rem;
     width: 15%;
+  }
+
+  .logo {
+    width: 3rem;
   }
 }
