--- a/src/index.scss
+++ b/src/index.scss
@@ -5,12 +5,13 @@ body {
   background-color: red;
   color: white;
   font-family: $fancy-font;
+  text-align: center;
 
-  h1 {
-    display: inline;
-    font-family: $sans-font;
-    margin: 0 auto;
-    text-align: center;
+  .App {
+    h1 {
+      display: inline;
+      font-family: $sans-font;
+    }
   }
 
   .Results {
@@ -24,7 +25,6 @@ body {
   .PreziCard {
     border: 4px solid white;
     display: inline-block;
-    text-align: center;
     margin: 1rem;
     padding: 1rem;
     width: 15%;
